typescript/checker/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode6-negative.ts.stderr
error: Cannot assign to this
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode6-negative.ts:1:1
  |
1 | eval++;
  | ^^^^

